--- a/project-01/src/sass/main.scss
+++ b/project-01/src/sass/main.scss
@@ -1,7 +1,7 @@
 @import 'normalize.scss';
 @import 'helpers/variables';
 @import 'helpers/placeholders';
-// @import 'helpers/mixins';
+@import 'helpers/mixins';
 @import 'helpers/extras';
 @import 'helpers/typography';
 @import 'base.scss';
