--- a/project-01/src/sass/components/section-teacher.scss
+++ b/project-01/src/sass/components/section-teacher.scss
@@ -22,7 +22,6 @@
     margin-bottom: 42px;
   }
 
-
   .section-teacher__title {
     font-size: 26px;
     line-height: 2.405;
@@ -46,5 +45,16 @@
 
 
 @media screen and (min-width: 1680px) {
-  
+  .section-teacher__wrapper {
+    padding: 0px 240px 0px 186px;
+    margin-bottom: 128px;
+  }
+
+
+  .section-teacher__title {
+    font-size: 46px;
+    line-height: 1.365;
+    margin-bottom: 72px;
+  }
 }
+
