--- a/project-01/src/sass/components/section-warranty.scss
+++ b/project-01/src/sass/components/section-warranty.scss
@@ -12,7 +12,7 @@
 }
 
 .section-warranty__wrapper-list {
-  padding: 0px 22px;
+  padding: 0px 20px 0px 26px;
   background: #f1f1f1;
 
 }
@@ -34,7 +34,7 @@
   }
 
   .section-warranty__wrapper-list {
-    padding: 0px 60px;
+    padding: 0px 55px 0px 66px;
   }
 
   .section-warranty__items {
@@ -45,7 +45,7 @@
 @media screen and (min-width: 1280px) {
   .section-warranty__wrapper {
     padding: 0px 35px;
-    margin-bottom: 84px;
+    margin-bottom: 82px;
   }
 
   .section-warranty__title {
@@ -55,7 +55,25 @@
   }
 
   .section-warranty__wrapper-list{
-    padding: 0px 116px;
+    padding: 0px 126px;
+  }
+}
+
+
+@media screen and (min-width: 1680px) {
+  .section-warranty__wrapper {
+    padding: 0px 156px 0px 186px;
+    margin-bottom: 120px;
+  }
+
+  .section-warranty__title {
+    font-size: 46px;
+    line-height: 1.365;
+    margin: 0px 0px 42px
+  }
+  
+  .section-warranty__wrapper-list{
+    padding: 0px 102px;
   }
 }
 
