--- a/project-01/src/sass/components/button.scss
+++ b/project-01/src/sass/components/button.scss
@@ -1,26 +1,27 @@
 .button {
-  // max-width: 250px;
-  width: 250px;
+  max-width: 250px;
   font-size: 11px;
   line-height: $main-text-height;
   @extend %button;
-  padding: 16px 14px;
+  padding: 16px 12px;
 
   &--light {
     color: $primary-white-color;
     background-color: $primary-orange-color;
-
+    letter-spacing: 1.3px;
+    
     &:hover,
     &:focus {
       color: $primary-orange-color;
       background-color: $primary-white-color;
     }
   }
-
+  
   &--lighter {
     color: #ff6b08;
     background-color: $primary-white-color;
     border: 2px solid #ff6b08;
+    letter-spacing: 1.3px;
 
     &:hover,
     &:focus {
@@ -33,12 +34,32 @@
 
 @media screen and (min-width: 1280px) {
   .button {
-    width: 300px;
+    max-width: 300px;
     font-size: 12px;
     padding: 25px 5px;
 
     &--light {
       letter-spacing: 2px;
+      padding: 25px 15px;
+    }
+  }
+}
+
+@media screen and (min-width: 1680px) {
+  .button {
+    max-width: 350px;
+    // width: 350px;
+    font-size: 14px;
+    // letter-spacing: 5px;
+    padding: 24px 15px;
+
+    &--light {
+      letter-spacing: 1.8px;
+    }
+    
+    &--lighter {
+      letter-spacing: 1.7px;
+      padding: 24px 36px;
     }
   }
 }
