--- a/project-01/src/sass/components/header-training.scss
+++ b/project-01/src/sass/components/header-training.scss
@@ -1,6 +1,7 @@
 .section-training__content {
   display: flex;
   flex-direction: column;
+  
 }
 
 .section-training__title {
@@ -9,6 +10,7 @@
   line-height: 1.45;
   color: #18191d;
   margin: 0px 0px 28px 0px;
+  letter-spacing: 0.6px;
 }
 
 .section-training__slogan {
@@ -17,6 +19,7 @@
   line-height: 1.35;
   color: #18191d;
   margin: 0px 0px 34px 0px;
+  letter-spacing: 0.623px;
 
   &::first-line {
     font-weight: 500;
@@ -43,7 +46,7 @@
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-    align-items: center;
+    // align-items: center;
   }
 
   .section-training__content {
@@ -55,11 +58,15 @@
 
   .section-training__title {
     font-size: 26px;
-    line-height: 1.269;
+    line-height: 1.291;
+    padding-top: 8px;
+    margin: 0px 0px 26px 0px;
   }
 
   .section-training__slogan {
-    line-height: 1.4;
+    line-height: 1.35;
+    // padding-top: 10px;
+    margin-bottom: 32px;
   }
 
   .section-training__button {
@@ -76,34 +83,42 @@
 @media screen and (min-width: 1280px) {
   .section-training__content {
     max-width: 498px;
+    padding-top: 52px;
   }
-
+  
   .section-training__title {
     font-size: 48px;
     line-height: 1.208;
+    letter-spacing: 1.05px;
   }
 
   .section-training__slogan {
     font-size: 18px;
     line-height: 1.463;
-    margin-bottom: 62px;
+    margin-bottom: 63px;
+    letter-spacing: 0.8px;
   }
 
   .section-training__img {
     max-width: 682px;
     margin: 0px;
   }
+
+  .section-training__button{
+    letter-spacing: 2.2px;
+  }
 }
 
 @media screen and (min-width: 1680px) {
   .section-training__content {
     max-width: 610px;
+    padding-top: 72px;
   }
 
   .section-training__title {
     font-size: 58.333px;
-    line-height: 1.3;
-    margin-bottom: 30px;
+    line-height: 1.34;
+    margin-bottom: 20px;
   }
 
   .section-training__slogan {
