--- a/project-01/src/sass/components/logo.scss
+++ b/project-01/src/sass/components/logo.scss
@@ -1,6 +1,7 @@
 .logo {
   display: inline-block;
-  width: 78px;
+  min-width: 78px;
+  min-height: 30px;
   @extend %link;
 
   &:hover,
@@ -11,6 +12,8 @@
 
 @media screen and (min-width: 768px) {
   .logo {
-    width: 128px;
+    max-width: 122px;
+    // max-height: 43px;
+    margin-bottom: 6px;
   }
 }
