--- a/project-01/src/sass/components/menu-problem.scss
+++ b/project-01/src/sass/components/menu-problem.scss
@@ -2,7 +2,7 @@
   @extend %list;
   background-color: rgb(255, 255, 255);
   box-shadow: 4px 6.928px 15.54px 5.46px rgba(29, 29, 27, 0.04);
-  padding: 20px 28px 0px;
+  padding: 18px 28px 0px;
   counter-reset: count-problem;
 }
 
@@ -21,7 +21,7 @@
 }
 
 .menu-problem__item:not(:nth-last-of-type(-3n+1)) {
-  margin-bottom: 10px;
+  margin-bottom: 11px;
 }
 
 .menu-problem__item:nth-last-of-type(-n+1) {
@@ -48,7 +48,7 @@
     top: -16px;
   }
 
-  &--position::before{
+  &--position::before {
     display: none;
   }
 }
@@ -58,7 +58,7 @@
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
-    padding: 24px 102px 0px 108px;
+    padding: 30px 90px 0px 108px;
   }
 
   .menu-problem__item {
@@ -66,7 +66,7 @@
   }
 
   .menu-problem__item:not(:nth-last-of-type(-3n+1)) {
-    margin-bottom: 16px;
+    margin-bottom: 20px;
   }
 
   .menu-problem__item:nth-last-of-type(-n+2) {
@@ -85,20 +85,35 @@
 
 @media screen and (min-width: 1280px) {
   .menu-problem {
-    padding: 52px 100px 0px;
+    justify-content: flex-start;
+    padding: 30px 90px 0px 108px;
+  }
+
+  .menu-problem {
+    // padding: 46px 130px 0px 100px;
+    padding: 46px 0px 0px 100px;
   }
 
   .menu-problem__item {
-    min-width: 284px;
+    min-width: 290px;
+
 
     &::before {
       font-size: 21px;
-      line-height: 1.6;
+      line-height: 1.55;
     }
   }
-    
+
+  .menu-problem__item:not(:nth-last-of-type(3n+2)) {
+    margin-right: 60px;
+  }
+
+  .menu-problem__item:not(:nth-last-child(3n)) {
+    margin-right: 80px;
+  }
+
   .menu-problem__item:not(:nth-last-of-type(-2n+1)) {
-    margin-bottom: 30px;
+    margin-bottom: 32px;
   }
 
   .menu-problem__item:nth-last-of-type(-n+3) {
@@ -107,23 +122,45 @@
 
   .menu-problem__text {
     font-size: 18px;
-    line-height: 1.62;
+    line-height: 1.6;
     padding-top: 6px;
     white-space: initial;
+    letter-spacing: 1.15px;
+
+    &--position {
+      padding-right: 0px;
+    }
+
+    &::before {
+      top: -16px;
+    }
   }
 }
 
 @media screen and (min-width: 1680px) {
   .menu-problem {
-    padding: 64px 86px 0px 96px;
+    padding: 58px 0px 0px 96px;
   }
 
   .menu-problem__item {
-    min-width: 326px;
+    min-width: 330px;
+    margin: 0;
   }
-  
+
+  .menu-problem__item:not(:nth-last-of-type(3n+2)) {
+    margin-right: 68px;
+  }
+
+  .menu-problem__item:nth-child(3n+2) {
+    margin-right: 104px;
+  }
+
+  .menu-problem__item:nth-of-type(3n) {
+    margin-right: 0px;
+  }
+
   .menu-problem__item:not(:nth-last-of-type(-2n+1)) {
-    margin-bottom: 34px;
+    margin-bottom: 38px;
   }
 
   .menu-problem__item:nth-last-of-type(-n+3) {
@@ -134,6 +171,6 @@
     font-size: 21px;
     line-height: 1.4;
     white-space: initial;
-    padding-top: 6px;
+    padding-top: 8px;
   }
 }
