--- a/project-01/src/sass/components/section-action.scss
+++ b/project-01/src/sass/components/section-action.scss
@@ -2,7 +2,7 @@
   display: flex;
   flex-direction: column;
   text-align: center;
-  padding: 42px 0px 0px;
+  padding: 38px 0px 0px;
 }
 
 .section-action__title {
@@ -10,10 +10,11 @@
   color: rgb(24, 25, 29);
   line-height: 1.65;
   margin: 0px 0px 34px 0px;
+  letter-spacing: 1.45px;
 }
 
 .section-action__items {
-  margin-bottom: 53px;
+  margin-bottom: 58px;
 }
 
 @media screen and (min-width: 768px) {
@@ -37,9 +38,10 @@
 
   .section-action__title {
     font-size: 42px;
-    line-height: 1.489;
+    line-height: 1;
     text-align: left;
-    margin: 0px 0px 32px 0px;
+    margin: 0px 0px 44px 0px;
+    letter-spacing: 1.45px;
   }
 }
 
