--- a/project-01/src/sass/components/card-teacher.scss
+++ b/project-01/src/sass/components/card-teacher.scss
@@ -6,15 +6,17 @@
 .card__img {
   width: 280px;
   height: 214px;
+  margin-bottom: 16px;
 }
 
 .card__title {
   font-size: 16px;
   color: #111517;
   line-height: 1.823;
-  margin: 0px 0px 24px;
+  margin: 0px 0px 16px;
   padding-bottom: 4px;
   border-bottom: 1px solid #d1d1d1;
+  letter-spacing: 1.2px;
 }
 
 .card__items {
@@ -41,16 +43,20 @@
   }
 
   &:not(:nth-last-of-type(-3n+1)) {
-    margin-bottom: 20px;
+    margin-bottom: 16px;
   }
 }
 
 .card__description {
   font-size: 13px;
+  line-height: 1.5;
   color: #111517;
-  word-spacing: 4px;
   margin: 0px;
-  white-space: pre-line;
+  letter-spacing: 0.7px;
+
+  &--position{
+    padding-right: 30px;
+  }
 }
 
 .card__text {
@@ -87,6 +93,7 @@
     text-shadow: 1px 1px 5px #ff6b08;
   }
 }
+
 
 @media screen and (min-width: 768px) {
   .card {
