--- a/project-01/src/sass/components/container.scss
+++ b/project-01/src/sass/components/container.scss
@@ -3,7 +3,7 @@
   // max-width: 320px;
   width: 320px;
   margin: 0px auto;
-  background-color: rgb(245, 245, 169);
+  // background-color: rgb(245, 245, 169);
 }
 
 // @media screen and (max-width: 767px) {
@@ -13,7 +13,7 @@
   .container {
     width: 768px;
     margin: 0px auto;
-    background-color: rgb(146, 233, 142);
+    // background-color: rgb(146, 233, 142);
   }
 }
 
@@ -32,7 +32,7 @@
   .container {
     width: 1280px;
     margin: 0px auto;
-    background-color: rgb(92, 216, 250);
+    // background-color: rgb(92, 216, 250);
   }
 }
 
