--- a/project-01/src/sass/components/menu-problem.scss
+++ b/project-01/src/sass/components/menu-problem.scss
@@ -20,10 +20,12 @@
   }
 }
 
+// всі, крім останнього
 .menu-problem__item:not(:nth-last-of-type(-3n+1)) {
-  margin-bottom: 11px;
+  margin-bottom: 12px;
 }
 
+// останній
 .menu-problem__item:nth-last-of-type(-n+1) {
   margin-bottom: 30px;
 }
@@ -58,11 +60,11 @@
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
-    padding: 30px 90px 0px 108px;
+    padding: 18px 90px 0px 108px;
   }
 
   .menu-problem__item {
-    max-width: 216px;
+    max-width: 218px;
   }
 
   .menu-problem__item:not(:nth-last-of-type(-3n+1)) {
@@ -75,7 +77,7 @@
 
   .menu-problem__text {
     white-space: initial;
-    letter-spacing: normal;
+    letter-spacing: 1.1px;
 
     &--position {
       padding-right: 60px;
@@ -104,18 +106,28 @@
     }
   }
 
+  // 1 і 4 елементи
   .menu-problem__item:not(:nth-last-of-type(3n+2)) {
     margin-right: 60px;
   }
 
+  //2, 3, 5 і 6 елементи
   .menu-problem__item:not(:nth-last-child(3n)) {
     margin-right: 80px;
   }
 
-  .menu-problem__item:not(:nth-last-of-type(-2n+1)) {
-    margin-bottom: 32px;
+  // 3 і 6 елементи
+  .menu-problem__item:nth-of-type(3n) {
+    margin-right: 0px;
+    min-width: 300px;
   }
 
+  // 1, 2 і 3 елементи
+  .menu-problem__item:not(:nth-last-of-type(-2n+1)) {
+    margin-bottom: 34px;
+  }
+
+  // 4, 5 і 6 елементи
   .menu-problem__item:nth-last-of-type(-n+3) {
     margin-bottom: 46px;
   }
@@ -143,26 +155,32 @@
   }
 
   .menu-problem__item {
-    min-width: 330px;
+    min-width: 356px;
     margin: 0;
   }
 
+  // 1 і 4 елементи
   .menu-problem__item:not(:nth-last-of-type(3n+2)) {
-    margin-right: 68px;
+    margin-right: 42px;
   }
 
+  // 2 і 5 елементи
   .menu-problem__item:nth-child(3n+2) {
-    margin-right: 104px;
+    margin-right: 78px;
   }
 
+  // 3 і 6 елементи
   .menu-problem__item:nth-of-type(3n) {
     margin-right: 0px;
+    min-width: 360px;
   }
 
+  // 1, 2 і 3 елементи
   .menu-problem__item:not(:nth-last-of-type(-2n+1)) {
     margin-bottom: 38px;
   }
 
+  // 4, 5 і 6 елементи
   .menu-problem__item:nth-last-of-type(-n+3) {
     margin-bottom: 78px;
   }
@@ -172,5 +190,9 @@
     line-height: 1.4;
     white-space: initial;
     padding-top: 8px;
+
+    &--position {
+      padding-right: 20px;
+    }
   }
 }
