--- a/project-01/src/sass/components/section-choosing.scss
+++ b/project-01/src/sass/components/section-choosing.scss
@@ -5,7 +5,7 @@
 .section-choosing__wrapper {
   display: flex;
   flex-direction: column;
-  height: 394px;
+  height: 398px;
   background: #111517;
   padding: 0px 20px;
 }
@@ -30,7 +30,8 @@
   }
 
   .section-choosing__wrapper {
-    height: 190px;
+    height: 198px;
+    // min-height: 190px;
     padding: 0px 40px;
   }
 
@@ -39,6 +40,7 @@
     text-align: center;
     margin-bottom: 22px;
     white-space: initial;
+    letter-spacing: 1.5px;
   }
 }
 
@@ -51,26 +53,29 @@
   .section-choosing__title {
     font-size: 42px;
     line-height: 1.346;
-    margin-bottom: 30px;
+    margin-bottom: 32px;
     z-index: 2;
+    letter-spacing: 2px;
   }
 }
 
 
 @media screen and (min-width: 1680px) {
   .section-choosing {
-    min-height: 620px;
+    min-height: 610px;
   }
 
   .section-choosing__wrapper {
-    height: 300px;
+    height: 306px;
     padding: 0px 156px 0px 186px;
   }
 
   .section-choosing__title {
     font-size: 46px;
     line-height: 1.365;
-    margin-bottom: 50px;
+    padding-right: 30px;
+    margin-bottom: 46px;
     z-index: 2;
+    letter-spacing: 2.5px;
   }
 }
