--- a/project-01/src/sass/components/section-program.scss
+++ b/project-01/src/sass/components/section-program.scss
@@ -14,12 +14,13 @@
 .section-program__title {
   font-size: 20px;
   line-height: 1.65;
-  margin: 0px 0px 30px 0px;
+  margin: 0px 0px 23px 0px;
   text-align: center;
+  letter-spacing: 1.2px;
 }
 
 .section-program__list {
-  margin-bottom: 36px;
+  margin-bottom: 34px;
 }
 
 .section-program__img {
@@ -31,16 +32,17 @@
   bottom: -90px;
 }
 
+
 @media screen and (min-width: 768px) {
   .section-program__wrapper {
-    padding: 64px 40px 0px;
-    margin-bottom: 150px;
+    padding: 45px 40px 0px;
+    margin-bottom: 160px;
   }
 
   .section-program__title {
     font-size: 26px;
     line-height: 2.405;
-    margin-bottom: 44px;
+    margin-bottom: 30px;
     text-align: left;
   }
 
@@ -55,14 +57,6 @@
     right: 0px;
     bottom: 52px;
   }
-
-  // .menu-actions__item:not(:nth-last-of-type(-3n+1)) {
-  //   margin-bottom: 16px;
-  // }
-
-  // .menu-actions__item:nth-last-of-type(-n+2) {
-  //   margin-bottom: 40px;
-  // }
 }
 
 @media screen and (min-width: 1280px) {
@@ -70,16 +64,18 @@
   // }
 
   .section-program__wrapper {
-    padding: 52px 0px 0px;
-    margin-bottom: 72px;
+    padding: 66px 0px 0px;
+    min-height: 720px;
+    margin-bottom: 66px;
   }
 
   .section-program__title {
     font-size: 42px;
     line-height: 1.489;
     padding-left: 35px;
-    margin-bottom: 38px;
+    margin-bottom: 30px;
     text-align: left;
+    letter-spacing: 2px;
   }
 
   // .section-program__list {
@@ -91,28 +87,29 @@
     height: 364px;
     background-image: url(../../images/pic-desk.png);
     left: 0px;
-    bottom: -130px;
+    bottom: -136px;
   }
 }
 
 @media screen and (min-width: 1680px) {
   .section-program__wrapper {
-    padding: 120px 140px 0px 186px;
-    margin-bottom: 86px;
+    padding: 116px 0px 0px 0px;
+    min-height: 836px;
+    margin-bottom: 76px;
   }
 
   .section-program__title {
     font-size: 46px;
     line-height: 1.365;
-    padding-left: 0px;
-    margin-bottom: 84px;
+    padding-left: 186px;
+    margin-bottom: 82px;
   }
-  
+
   .section-program__img {
     width: 700px;
     height: 485px;
     background-image: url(../../images/pic-desk-larg.png);
     left: 0px;
-    bottom: -246px;
+    bottom: -248px;
   }
 }
