--- a/project-01/src/sass/components/section-teacher.scss
+++ b/project-01/src/sass/components/section-teacher.scss
@@ -14,6 +14,7 @@
   color: #111517;
   line-height: 1.5;
   margin: 0px 0px 24px;
+  letter-spacing: 1.2px;
 }
 
 @media screen and (min-width: 768px) {
